# AI-Final-Project

./: .gitignore  .gitmodules  AGENTS.md  PROGRESS.md  README.md  REINFORCE_PHASE_PLAN.md  extraPlan.md  pyproject.toml  requirements.txt  run_baseline.sh  run_controller_sweep.sh  run_dynamic_threshold.sh  run_early_exit.sh  run_fix_threshold.sh  run_reinforce_sweep.sh  run_train_controller.sh  run_train_reinforce.sh
.agents/skills/: content-refinement-agent  literature-review-agent  outline-agent  paper-orchestra  plotting-agent  section-writing-agent
configs/: baseline.json  controller.json  dynamic_threshold.json  early_exit.json  fixed_threshold.json  reinforce_controller.json
scripts/: analyze_statistical_robustness.py  make_ablation_assets.py  make_report_assets.py  run_controller_lambda_sweep.py  run_dynamic_threshold.py  run_reinforce_sweep.py  run_threshold_ablation.py  run_threshold_sweep.py  train_baseline.py  train_controller.py  train_early_exit.py  train_reinforce_controller.py
src/ai_final_project/: __init__.py  analysis.py  config.py  controller.py  data.py  evaluation.py  metrics.py  profiling.py  results.py  training.py  utils.py
tests/: test_analysis.py  test_models.py  test_outputs.py  test_policies.py  test_reinforce.py
workspace/: citation_pool.json  refs.bib  research_brief.md
workspace/figures/: figure_captions.md  figure_manifest.md  plotting_notes.md  regenerate_additional_analysis.py
workspace/final/: main_no_blank.tex  paper.tex  statement.tex
workspace/inputs/: conference_guidelines.md  experimental_log.md  idea.md  template.tex
(+39 files in other folders)
